<resources>
    <string name="app_name">Android Practice 11</string>
    <string name="hai_semua">Hi"</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="student_id">Student Id</string>
    <string name="student_name">Student Name</string>
    <string name="student_phone_number">Studend Phone Number</string>
    <string name="save">Save</string>
    <string name="dial">Dial</string>
    <string name="change_language">Change Language</string>
    <string name="Email">Email</string>
</resources>